@@ -123,36 +123,6 @@ name|apache
 operator|.
 name|cayenne
 operator|.
-name|di
-operator|.
-name|DIBootstrap
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|di
-operator|.
-name|spi
-operator|.
-name|ModuleLoader
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
 name|gen
 operator|.
 name|CgenConfiguration
@@ -305,7 +275,7 @@ name|cayenne
 operator|.
 name|tools
 operator|.
-name|CayenneToolsModuleProvider
+name|ToolsInjectorBuilder
 import|;
 end_import
 
@@ -438,21 +408,31 @@ block|}
 name|ClassGenerationAction
 name|classGenerationAction
 init|=
-name|DIBootstrap
-operator|.
-name|createInjector
-argument_list|(
 operator|new
-name|ModuleLoader
+name|ToolsInjectorBuilder
 argument_list|()
 operator|.
-name|load
+name|addModule
 argument_list|(
-name|CayenneToolsModuleProvider
+name|binder
+lambda|->
+name|binder
+operator|.
+name|bind
+argument_list|(
+name|DataChannelMetaData
 operator|.
 name|class
 argument_list|)
+operator|.
+name|toInstance
+argument_list|(
+name|metaData
 argument_list|)
+argument_list|)
+operator|.
+name|create
+argument_list|()
 operator|.
 name|getInstance
 argument_list|(
